--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,51 @@
-body{
-     background:#561370;
-}
-html{
+
+html {
   scroll-behavior: smooth;
-  
 }
-p{
-  font-family: sans-serif;
-  font-style: bold;
+
+body {
+  background-color: #0f172a; 
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  color: #f1f5f9;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.7;
+  color: #cbd5e1;
+  font-weight: 400;
+}
+
+* {
+  transition: all 0.3s ease;
+  box-sizing: border-box;
+}
+body[data-theme='dark'] {
+  background-color: #0f172a;
+  color: #f1f5f9;
+}
+
+
+body[data-theme='light'] {
+  background-color: #f8fafc;
+  color: #0f172a;
+}
+
+.theme-toggle-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  padding: 10px 16px;
+  border-radius: 20px;
+  border: none;
+  background-color: #64748b;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.theme-toggle-btn:hover {
+  background-color: #94a3b8;
 }
